--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,33 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^6.2",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
+        "illuminate/collections": "^11.23",
+        "jawira/case-converter": "^3.5",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-foundation": "6.0.*",
+        "symfony/routing": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "liip/test-fixtures-bundle": "^2.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
-        "symfony/maker-bundle": "^1.38",
-        "symfony/phpunit-bridge": "^6.0"
+        "symfony/maker-bundle": "^1.50",
+        "symfony/panther": "^2.1",
+        "symfony/phpunit-bridge": "^6.0",
+        "zenstruck/foundry": "^1.38"
     },
     "config": {
         "allow-plugins": {
